# StormSurge

./: .gitignore  CityMarkers.cs  CityMarkers.cs.uid  LICENSE  Map3dFeatures.cs  Map3dFeatures.cs.uid  README.md  StormSurge.sln  UI.tscn  default.tscn  icon.svg.import  project.godot
Assets/: Currency display.png.import  Darker.png.import  Human AI bar.png.import  Human ai UI.png.import  Hurricane Button Clicked.png.import  Hurricane Button Hovered.png.import  Hurricane Button Unclicked.png.import  Info Button Clicked.png.import  Info Button Hovered.png.import  Info Button Unclicked.png.import  LOW RES DARK GLOW.png.import  LOW RES LIGHT GLOW.png.import  LOW RES NO GLOW.png.import  LOW RES STORM.png.import  LOW RES SURGE.png.import  NightSkyHDRI003_4K-TONEMAPPED.jpg.import  Notification box .png.import  Start Button Clicked.png.import  Start Button Hovered.png.import  Start Button Unclicked.png.import  Start.png.import  Start_Clicked.png.import  Start_Hover.png.import  Storm Logo.png.import  Storm_Logo.png.import  Storm_Logo_Shadowed.png.import  Surge Logo.png.import  Surge_Logo.png.import  clouds.png.import  colormap.png.import  colormap_night.jpg.import  heightmap.png.import  heightmap_normal.png.import  heightmap_regions.png.import  icon.svg.import  map.mtl  map.obj.import  pin.glb  pin.glb.import  pin.gltf.import  (+3 more)
Documents/: Data :P.xlsx  contributions.csv
Materials/: heightmap.tres
More Weather Stuff/: Storm3D.tscn  (+5 more)
Python/: .gitignore  explore_regions.ipynb  geo_regions.py  main.ipynb  pyproject.toml  region_maker.py  requirements.txt  show_regions.py
(+75 files in other folders)
